domain-specific-kong-gateway/1-retail-banking-kong-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: retail-banking-kong-api-gateway
  namespace: retail-banking
spec:
  gatewayClassName: kong-retail
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same
