domain-specific-kong-gateway/2-payments-kong-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: payments-kong-api-gateway
  namespace: payments
spec:
  gatewayClassName: kong-payments
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same
