domain-specific-kong-gateway/3-grc-kong-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: grc-kong-api-gateway
  namespace: grc
spec:
  gatewayClassName: kong-grc
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same
